--- a/Trilha Discovery/index.html
+++ b/Trilha Discovery/index.html
@@ -7,28 +7,41 @@
     <title>Happy</title>
 
     <link rel="icon" href="./public//images/logo-icon.png">
+
+    <link rel="stylesheet" href="./public/css/main.css">
+    <link rel="stylesheet" href="./public/css/animations.css">
+    <link rel="stylesheet" href="./public/css/page-landing.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <img src="./public/images/logo.svg" alt="Logomarca de Happy" />
+    <div id="page-landing">
+        <div id="container">
 
-        <div>
-            <strong>Rio do Sul</strong>
-            <p>Santa Catarina</p>
+            <header>
+                <img class="animate-up" id="logo" src="./public/images/logo.svg" alt="Logomarca de Happy" />
+
+                <div class="location animate-up">
+                    <strong>Rio do Sul</strong>
+                    <p>Santa Catarina</p>
+                </div>
+            </header>
+
+            <main>
+                <h1>Leve felicidade para o mundo</h1>
+
+                <section class="visit">
+                    <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
+                    <a href="#" title="Visite orfanatos" class="animate-up">
+                        <img src="./public/images/arrow.svg" alt="Ir para o mapa" />
+                    </a>
+                </section>
+            </main>
         </div>
-    </header>
-
-    <main>
-        <h1>Leve felicidade para o mundo</h1>
-
-        <section>
-            <p>Visite orfanatos e mude a vida de muitas crianças</p>
-            <a href="#" title="Visite orfanatos">
-                <img src="./public/images/arrow.svg" alt="Ir para o mapa" />
-            </a>
-        </section>
-    </main>
+    </div>
 </body>
 
 </html>
