--- a/Trilha Discovery/create-orphanage.html
+++ b/Trilha Discovery/create-orphanage.html
@@ -48,6 +48,8 @@
 
                     <div class="map-container">
                         <div id="mapid"></div>
+                        <input type="hidden" name="lat" />
+                        <input type="hidden" name="lng" />
 
                         <footer>
                             <a href="#" id="select-point">
@@ -77,12 +79,12 @@
                         <div class="images-upload" id="images">
                             <div class="new-upload">
                                 <input name="images" placeholder="Cole o link da foto aqui" required />
-                                <span>
+                                <span onclick="deleteField(event)">
                                     <img src="./public/images/remove-file.svg" alt="Remover Foto">
                                 </span>
                             </div>
                         </div>
-                        <button type="button">
+                        <button type="button" onclick="addPhotoField()">
                             <img src="./public/images/add-file.svg" alt="Nova images" />
                         </button>
                     </div>
@@ -106,8 +108,9 @@
                         <input type="hidden" id="open_on_weekends" name="open_on_weekends" value="1" required />
 
                         <div class="button-select">
-                            <button type="button" class="active">Sim</button>
-                            <button type="button">Não</button>
+                            <button data-value="1" onclick="toggleSelect(event)" type="button"
+                                class="active">Sim</button>
+                            <button data-value="0" onclick="toggleSelect(event)" type="button">Não</button>
                         </div>
 
                         <button type="submit" class="primary-button">
